Fixed broken links

--- a/frontend/src/welcome.html
+++ b/frontend/src/welcome.html
@@ -25,7 +25,7 @@
                     <button id="login-button" class="big-btn">Sign Up</button>
                     
                 </form>
-                <a href="hello.html" class="signup-link">Already Have An Account? Log In</a>
+                <a href="login.html" class="signup-link">Already Have An Account? Log In</a>
             </div>
         </div>
     </div>
