Signup and db implemented

--- a/frontend/src/welcome.html
+++ b/frontend/src/welcome.html
@@ -11,24 +11,20 @@
         <div id="login-container">
             <div class="login">
                 <h1>Login</h1>
-                <form>
-                    <h3>Enter Username</h3>
-                    <input type="text" placeholder="Username" id="username">
-                    <h3>Enter password</h3>
-                    <i class='bx bx-lock-alt input__lock'></i>
+                <form id="registration-form" method="POST">
+                    <h3>Enter Username <span class="required">*</span></h3>
+                    <input type="text" placeholder="Username" class="input__username" id="username">
+                    <h3>Enter password <span class="required">*</span></h3>
                     <input type="password" placeholder="Password" class="input__password" id="password">
-                    <i class='bx bx-hide input__icon' id="input-icon"></i>
-                    <h3>Re-enter Password</h3>
-                    <i class='bx bx-lock-alt input__lock'></i>
-                    <input type="password" placeholder="Confirm Password" class="input__password" id="confirmpassword">
-                    <i class='bx bx-hide input__icon' id="input-icon"></i>
-                    <button id="login-button" class="big-btn">Sign Up</button>
+                    <h3>Re-enter Password <span class="required">*</span></h3>
+                    <input type="password" placeholder="Confirm Password" class="input__password" id="confirmpassword">                    
+                    <button type="submit" id="login-button" class="big-btn">Sign Up</button>
                     
                 </form>
                 <a href="login.html" class="signup-link">Already Have An Account? Log In</a>
             </div>
         </div>
     </div>
-    <script src="log.js"></script>
+    <script src="welcome.js"></script>
 </body>
 </html>
