Login functionality added

--- a/frontend/src/login.html
+++ b/frontend/src/login.html
@@ -11,14 +11,15 @@
         <div id="login-container">
             <div class="login">
                 <h1>Login</h1>
-                <form>
+                <form id="login-form" method="POST">
                     <input type="text" placeholder="Username" id="username">
                     <input type="password" placeholder="Password" id="password">
-                    <button id="login-button" class="big-btn">Log in</button>
+                    <button id="login-button" class="big-btn" type="submit">Log in</button>
                 </form>
                 <a href="signup.html" class="signup-link">Don't have an account? Sign up</a>
             </div>
         </div>
     </div>
+    <script src="log.js"></script>
 </body>
 </html>
