--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -17,6 +17,6 @@
             </div>
         </div>
     </div>
-    <script src="log.js"></script>
+    <script src="signup.js"></script>
 </body>
 </html>
