--- a/frontend/src/signup.html
+++ b/frontend/src/signup.html
@@ -10,10 +10,10 @@
     <div id="content">
         <div id="login-container">
             <div class="login">
-                <h1>Sign Up</h1>
+                <h1>Are you new here?</h1>
                 <button id="login-button" class="big-btn">Log in with Spotify</button>
                 <p class="login-desc">Please link your Spotify Account.</p>
-                <p class="login-desc-small">You will automatically be redirected to the login page.</p>
+                <p class="login-desc-small">You will automatically be redirected to the sign up page.</p>
             </div>
         </div>
     </div>
