--- a/frontend/src/landing.html
+++ b/frontend/src/landing.html
@@ -22,7 +22,7 @@
 
 			<ul class="menu-dropdown">
 
-				<li><a href="#">Dashboard</a><span class="icon"><i class="fa fa-dashboard"></i></span></li>
+				<li><a href="#">Profile</a><span class="icon"><i class="fa fa-dashboard"></i></span></li>
 
 				<li><a href="#">Messages</a><span class="icon"><i class="fa fa-envelope"></i></span></li>
 
